--- a/src/app/reports/grievance-log-report/grievance-log-report.component.html
+++ b/src/app/reports/grievance-log-report/grievance-log-report.component.html
@@ -124,7 +124,7 @@
                                                             <thead>   
                                                                 <!-- Grievence Id, Reported date, Emp Name , EMp id , Issue,  Resolution, status, Resolved date, Resolved by (empid)                                                             -->
                                                                 <tr class="table-light text-white font-type">
-                                                                    <th scope="col" style="text-align: center;">Grievence Id </th>  
+                                                                    <th scope="col" style="text-align: center;">Grievance Id </th>  
                                                                     <th scope="col" style="text-align: center;">EmpCode </th>  
                                                                     <th scope="col" style="text-align: center;">Emp Name</th>                                                                   
                                                                     <th scope="col" style="text-align: center;">Reported Date  </th>
