--- a/src/app/LMS/attendance-register/attendance-register.component.html
+++ b/src/app/LMS/attendance-register/attendance-register.component.html
@@ -79,7 +79,7 @@
 
                                                     <div class="align-items-center d-flex ">
                                                         <div class="form-check form-check-info">
-                                                            <input class="form-check-input" type="checkbox" id="formCheck11"(change)="checkAll($event)">
+                                                            <input class="form-check-input" type="checkbox" id="formCheck11"(change)="checkAll($event)"[ngClass]="{'readonly-checkbox': tabledata.ATTENDANCE_FLAG === 1}">
                                                         </div>
                                                         <h4 class="card-title mb-0 flex-grow-1 fs-14 font-type fw-semibold text-blue">Employee Attendance Register</h4>
                                                     </div>
@@ -114,7 +114,7 @@
                                                             <td>{{ item.EMP_NAME }}</td>
                                                             <td class="text-center"> 
                                                                 <div class="form-check form-check-info text-center">                                                                    
-                                                                    <input class="form-check-input" type="checkbox" [(ngModel)]="item.checked" >
+                                                                    <input class="form-check-input" type="checkbox" [(ngModel)]="item.EMP_ATTENDANCE_FLAG" [ngClass]="{'readonly-checkbox': tabledata.ATTENDANCE_FLAG === 1}" >
                                                                 </div>
                                                             </td>
                                                         </tr>
@@ -125,8 +125,8 @@
                                             <!-- end tab content -->
                                             <div class="col-lg-12">
                                                 <div class="hstack gap-2 justify-content-end">
-                                                <button type="button" class="btn btn-success btn-label right ms-auto nexttab nexttab font-type" [disabled]="disablesubmit" (click)="validate()" ><i class="ri-check-double-line label-icon align-middle fs-16 ms-2" ></i>Mark Attendance</button>
-                                                <button type="button" class="btn btn-danger btn-label right  nexttab  nexttab font-type"(click)="clearAll()"><i class="ri-close-circle-line label-icon align-middle fs-16 ms-2"></i>Clear All</button>
+                                                <button type="button" class="btn btn-success btn-label right ms-auto nexttab nexttab font-type" [disabled]="tabledata.ATTENDANCE_FLAG==1" (click)="validate()" ><i class="ri-check-double-line label-icon align-middle fs-16 ms-2" ></i>Mark Attendance</button>
+                                                <button type="button" class="btn btn-danger btn-label right  nexttab  nexttab font-type"(click)="clearAll()"[disabled]="tabledata.ATTENDANCE_FLAG==1"><i class="ri-close-circle-line label-icon align-middle fs-16 ms-2"></i>Clear All</button>
                                                 </div>
                                             </div>
                                             </div>
