--- a/src/app/OffBoarding/resignation-request/resignation-request.component.html
+++ b/src/app/OffBoarding/resignation-request/resignation-request.component.html
@@ -104,7 +104,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item"*ngIf="this.showtab">
-                                            <a class="nav-link py-3 Returns" data-bs-toggle="tab" id="Returns" href="#accounts" role="tab" aria-selected="false"(click)="onTabSelected(3);">
+                                            <a class="nav-link py-3 Returns" data-bs-toggle="tab" id="Returns" href="#accounts" role="tab" aria-selected="false"(click)="fetchAccounts();">
                                                 <i class="ri-money-dollar-circle-line me-1 align-bottom fs-16"></i> Accounts
                                             </a>
                                         </li>
@@ -147,7 +147,7 @@
                                                                 <ul class="dropdown-menu dropdown-menu-end text-blue" >
                                                                     <li><a class="dropdown-item text-dark"*ngIf="item.APPROVED_STATUS==1" [routerLink]="['/resignation_acceptance_letter']" [queryParams]="{ code:item.EMP_CODE}"><i class="ri-file-paper-line  me-2 align-bottom text-blue fs-18"></i><span class="text-blue">Resignation Acceptance Letter</span> </a></li>
                                                                     <li>
-                                                                        <a class="dropdown-item text-blue"*ngIf="checkDate(item) && item.EXITINTERVIEW_STATUS==1" [routerLink]="item.EXITINTERVIEW_DATE ? null : '/exitinterviewform'"><i class="ri-draft-line me-2 align-bottom text-blue fs-18"></i><span class="text-blue">Exit Interview Form</span>
+                                                                        <a class="dropdown-item text-blue"*ngIf="checkDate(item) && item.EXITINTERVIEW_STATUS==1" [routerLink]="item.EXITINTERVIEW_DATE ? null : '/exitinterviewform'" [queryParams]="{ REQID:item.REQUEST_ID, CODE:item.EMP_CODE, VIEW:0}"><i class="ri-draft-line me-2 align-bottom text-blue fs-18"></i><span class="text-blue">Exit Interview Form</span>
                                                                             <button type="button" class="btn position-relative">
                                                                             <span class="position-absolute top-0 translate-middle badge border border-light bg-danger p-1 ms-3 font-type" *ngIf="!item.EXITINTERVIEW_DATE">Pending<span class="visually-hidden"></span></span>
                                                                             <span class="position-absolute top-0 translate-middle badge border border-light bg-success p-1 ms-3 font-type"*ngIf="item.EXITINTERVIEW_DATE">Submitted<span class="visually-hidden"></span></span>
@@ -196,7 +196,7 @@
                                                 </div>
                                                 </div>
                                         </div>
-                                        <table class="table table-nowrap align-middle table-bordered border-orange table-hover topbar-up">
+                                        <table class="table table-nowrap align-middle table-bordered border-orange table-hover topbar-up" *ngIf="assetid!=0">
                                             <thead class="table-light font-type text-white">
                                                 <tr>
                                                     <th>ID</th>
@@ -248,7 +248,7 @@
                                                 </div>
                                                 </div>
                                         </div>
-                                        <table class="table table-nowrap align-middle table-bordered border-orange table-hover topbar-up">
+                                        <table class="table table-nowrap align-middle table-bordered border-orange table-hover topbar-up"*ngIf="assetid!=0">
                                             <thead class="table-light font-type text-white">
                                                 <tr>
                                                     <th>Asset ID</th>
@@ -299,7 +299,7 @@
                                                 </div>
                                                 </div>
                                         </div>
-                                        <table class="table table-nowrap align-middle table-bordered border-orange table-hover topbar-up">
+                                        <table class="table table-nowrap align-middle table-bordered border-orange table-hover topbar-up"*ngIf="EosProcessStatus==4||EosProcessStatus==5">
                                             <thead class="table-light font-type text-white">
                                                 <tr>
                                                     <th>A/C No</th>
