--- a/src/app/competency/competency-assessment-manager/competency-assessment-manager.component.html
+++ b/src/app/competency/competency-assessment-manager/competency-assessment-manager.component.html
@@ -231,14 +231,23 @@
                                                             
                                                         </ul><!-- end ul -->
                                                     </div>
+                                                    
                                                 </div><!-- end card body -->
                                             </div><!-- end card -->
+                                            
                                             
                                         </div><!-- end col -->
                                     </div><!-- end row -->
                                     </div>
                                 </div>
                                      <!-- end card -->
+                                     <div class="col-lg-12" >
+                                        <div class="hstack gap-1 justify-content-end">
+                                            <a routerLink="/CompetencyEvaluationManager">
+                                            <button type="button" class="btn btn-success btn-label right nexttab nexttab font-type text-white"><i class="ri-arrow-go-back-line label-icon align-middle fs-16 ms-2"></i>Back</button>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                     </div>
                     <!-- End LIST -->
